--- a/.github/workflows/draft-new-release.yml
+++ b/.github/workflows/draft-new-release.yml
@@ -34,7 +34,7 @@ jobs:
       - name: Commit changelog and manifest files
         id: make-commit
         run: |
-          git add CHANGELOG.md package.json
+          git add package.json
           git commit --message "Prepare release ${{ github.event.inputs.version }}"
 
           echo "::set-output name=commit::$(git rev-parse HEAD)"
