--- a/.github/workflows/update-changelog.yml
+++ b/.github/workflows/update-changelog.yml
@@ -29,9 +29,13 @@ jobs:
           commit_message: Update CHANGELOG
           file_pattern: CHANGELOG.md
       - name: Merge master into dev branch
-        run: |
-          git fetch 
-          git checkout dev
-          git pull
-          git merge origin/master -m "chore: auto merge master back to nextjs"
-          git push
+        uses: thomaseizinger/create-pull-request@1.0.0
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          head: master
+          base: dev
+          title: Merge master into dev branch
+          body: |
+            This PR merges the master branch back into dev.
+            This happens to ensure that the updates that happend on the release branch, i.e. CHANGELOG and manifest updates are also present on the dev branch.
