--- a/.github/workflows/publish-new-release.yml
+++ b/.github/workflows/publish-new-release.yml
@@ -56,13 +56,12 @@ jobs:
           draft: false
           prerelease: false
 
-      - name: Merge master into dev branch
+      - name: Merge master back to dev
         run: |
           git fetch --unshallow
           git checkout dev
           git pull
-          git merge origin/master -m "chore: auto merge master back to nextjs"
+          git merge --no-ff master -m "Auto-merge master back to dev"
           git push
-
       # if needed, you can checkout the latest master here, build artifacts and publish / deploy them somewhere
       # the create-release action has an output `upload_url` output that you can use to upload assets
