--- a/.github/workflows/addComment.yml
+++ b/.github/workflows/addComment.yml
@@ -3,7 +3,7 @@
 name: Add comment
 
 on:
-  pull_request:
+  push:
     branches:
       # branches in the case of PR specifies target/base branch
       - 'release/*'
