--- a/.github/workflows/draft-new-release.yml
+++ b/.github/workflows/draft-new-release.yml
@@ -90,5 +90,5 @@ jobs:
           gh api \
             --method POST \
             -H "Accept: application/vnd.github+json" \
-            https://api.github.com/repos/${{github.event.pull_request.head.repo.full_name}}/issues/${{github.event.pull_request.number}}/comments \
+            https://api.github.com/repos/${{ github.event.repository.name }}/issues/${{github.event.pull_request.number}}/comments \
             -f body="${{ steps.splitCommentBack.outputs._0 }}"
