--- a/.github/workflows/addComment.yml
+++ b/.github/workflows/addComment.yml
@@ -39,7 +39,7 @@ jobs:
         id: getCommentContent
         uses: juliangruber/read-file-action@v1
         with:
-          path: ./.github/URELEASEDCHANGELOG.md
+          path: ./URELEASEDCHANGELOG.md
 
         # - name: Remove Prettier Ignore Comment Start
         #   uses: rishabhgupta/split-by@v1
@@ -64,5 +64,5 @@ jobs:
           gh api \
             --method POST \
             -H "Accept: application/vnd.github+json" \
-            https://api.github.com/repos/${{github.event.pull_request.head.repo.full_name}}/issues/${{github.event.pull_request.number}}/comments \
+            https://api.github.com/repos/${{ github.event.repository.name}}/issues/${{github.event.pull_request.number}}/comments \
             -f body="${{ steps.splitCommentBack.outputs._0 }}"
