--- a/.github/workflows/draft-new-release.yml
+++ b/.github/workflows/draft-new-release.yml
@@ -55,6 +55,7 @@ jobs:
 
       - name: Create pull request
         uses: thomaseizinger/create-pull-request@1.0.0
+        id: create-pr
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
@@ -68,12 +69,12 @@ jobs:
             This PR was created in response to a manual trigger of the release workflow here: https://github.com/${{ github.repository }}/actions/runs/${{ github.run_id }}.
             I've updated the changelog and bumped the versions in the manifest files in this commit: ${{ steps.make-commit.outputs.commit }}.
             Merging this PR will create a GitHub release and upload any assets that are created as part of the release build.
-      
-#       - name: Generate Comment String from Markdown
-#         id: getCommentContent
-#         uses: juliangruber/read-file-action@v1
-#         with:
-#           path: ./URELEASEDCHANGELOG.md
+                  Merging this PR will create a GitHub release and upload any assets that are created as part of the release build.
+      - name: Generate Comment String from Markdown
+        id: getCommentContent
+        uses: juliangruber/read-file-action@v1
+        with:
+          path: ./URELEASEDCHANGELOG.md
 
 #         # - name: Remove Prettier Ignore Comment Start
 #         #   uses: rishabhgupta/split-by@v1
@@ -89,16 +90,16 @@ jobs:
 #         #     string: ${{ steps.splitCommentFront.outputs._1 }}
 #         #     split-by: " <!--"
 
-#       - name: Add Comment to PR
-#         env:
-#           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-#         if: steps.findExistingComment.outputs.comment-id == 0
-#         # In the event of 401 bad credentials, check PAT expiry on bot
-#         run: |
-#           git config --local user.email "matthew.magnotta@avb.net"
-#           git config --local user.name "MattyMags"
-#           gh api \
-#             --method POST \
-#             -H "Accept: application/vnd.github+json" \
-#             https://api.github.com/repos/${{ github.event.repository.name }}/issues/${{github.event.pull_request.number}}/comments \
-#             -f body="${{ steps.splitCommentBack.outputs._0 }}"
+      - name: Add Comment to PR
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        if: steps.findExistingComment.outputs.comment-id == 0
+        # In the event of 401 bad credentials, check PAT expiry on bot
+        run: |
+          git config --local user.email "matthew.magnotta@avb.net"
+          git config --local user.name "MattyMags"
+          gh api \
+            --method POST \
+            -H "Accept: application/vnd.github+json" \
+            https://api.github.com/repos/${{ github.event.repository.name }}/issues/${{ steps.create-pr.outputs.number }}/comments \
+            -f body="${{ steps.splitCommentBack.outputs._0 }}"
