--- a/.github/workflows/draft-new-release.yml
+++ b/.github/workflows/draft-new-release.yml
@@ -48,7 +48,7 @@ jobs:
         uses: thomaseizinger/create-pull-request@1.0.0
         id: create-pr
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.GH_TOKEN }}
         with:
           head: release/${{ github.event.inputs.version }}
           base: master
@@ -92,5 +92,5 @@ jobs:
           gh api \
             --method POST \
             -H "Accept: application/vnd.github+json" \
-            https://api.github.com/repos/mattymags/${{ github.event.repository.name }}/pull/${{ steps.create-pr.outputs.number }}/comments \
-            -f body="${{ steps.splitCommentBack.outputs._0 }}"
+            https://api.github.com/MattyMags/draft-release/pull/${{ steps.create-pr.outputs.number }}/comments \
+            -f body="hi"
