--- a/.github/workflows/draft-new-release.yml
+++ b/.github/workflows/draft-new-release.yml
@@ -92,5 +92,5 @@ jobs:
           gh api \
             --method POST \
             -H "Accept: application/vnd.github+json" \
-            https://api.github.com/MattyMags/draft-release/pull/${{ steps.create-pr.outputs.number }}/comments \
+            https://api.github.com/repos/Mattymags/draft-release/pulls/${{ steps.create-pr.outputs.number }}/comments
             -f body="hi"
