--- a/.github/workflows/draft-new-release.yml
+++ b/.github/workflows/draft-new-release.yml
@@ -84,7 +84,6 @@ jobs:
 #         #     split-by: " <!--"
 
       - name: Add Comment to PR
-        if: steps.findExistingComment.outputs.comment-id == 0
         # In the event of 401 bad credentials, check PAT expiry on bot
         run: |
           git config --local user.email "matthew.magnotta@avb.net"
@@ -93,4 +92,5 @@ jobs:
             --method POST \
             -H "Accept: application/vnd.github+json" \
             https://api.github.com/repos/Mattymags/draft-release/pulls/${{ steps.create-pr.outputs.number }}/comments
-            -f body="hi"
+           -d '{"body":"Great stuff!"}'
+
