--- a/.github/workflows/draft-new-release.yml
+++ b/.github/workflows/draft-new-release.yml
@@ -91,6 +91,6 @@ jobs:
           gh api \
             --method POST \
             -H "Accept: application/vnd.github+json" \
-            https://api.github.com/repos/Mattymags/draft-release/pulls/${{ steps.create-pr.outputs.number }}/comments
-           -d '{"body":"Great stuff!"}'
+            https://api.github.com/repos/Mattymags/draft-release/issues/${{ steps.create-pr.outputs.number }}/comments \
+            -f body="hi"
 
