--- a/.github/workflows/draft-new-release.yml
+++ b/.github/workflows/draft-new-release.yml
@@ -92,5 +92,5 @@ jobs:
             --method POST \
             -H "Accept: application/vnd.github+json" \
             https://api.github.com/repos/Mattymags/draft-release/issues/${{ steps.create-pr.outputs.number }}/comments \
-            -f body="hi"
+            -f body="${{ steps.getCommentContent.outputs.content }}"
 
