--- a/.github/workflows/draft-new-release.yml
+++ b/.github/workflows/draft-new-release.yml
@@ -17,6 +17,7 @@ jobs:
       - uses: actions/checkout@v2
         with:
           fetch-depth: 0
+          
       - name: Create release branch
         run: git checkout -b release/${{ github.event.inputs.version }}
 
@@ -24,14 +25,9 @@ jobs:
         run: |
           git config user.name "GitHub actions"
           git config user.email noreply@github.com
+          
       - name: Bump version in package.json
         run: yarn version --new-version ${{ github.event.inputs.version }} --no-git-tag-version
-
-      # - name: Checkout code
-      #   uses: actions/checkout@v2
-      #   with:
-      #     ref: dev
-      #     fetch-depth: 0
 
       - name: Update changelog
         run: yarn install && yarn unreleased
@@ -42,10 +38,10 @@ jobs:
           git add ./package.json ./URELEASEDCHANGELOG.md
           git commit --message "Prepare release ${{ github.event.inputs.version }}"
           echo "::set-output name=commit::$(git rev-parse HEAD)"
+          
       - name: Push new branch
         run: git push origin release/${{ github.event.inputs.version }}
       
-
       - name: Create pull request
         uses: thomaseizinger/create-pull-request@1.0.0
         id: create-pr
@@ -56,34 +52,19 @@ jobs:
           base: master
           title: Release version ${{ github.event.inputs.version }}
           reviewers: ${{ github.actor }}
-
           body: |
             Hi @${{ github.actor }}!
             This PR was created in response to a manual trigger of the release workflow here: https://github.com/${{ github.repository }}/actions/runs/${{ github.run_id }}.
-            I've updated the changelog and bumped the versions in the manifest files in this commit: ${{ steps.make-commit.outputs.commit }}.
-            Merging this PR will create a GitHub release and upload any assets that are created as part of the release build.
-                  Merging this PR will create a GitHub release and upload any assets that are created as part of the release build.
+            I've updated the Unreleased Changelog and bumped the versions in the manifest files in this commit: ${{ steps.make-commit.outputs.commit }}.
+            Merging this PR will create a GitHub release will publish the release and push the tags.
+                  
       - name: Generate Comment String from Markdown
         id: getCommentContent
         uses: juliangruber/read-file-action@v1
         with:
           path: ./URELEASEDCHANGELOG.md
 
-#         # - name: Remove Prettier Ignore Comment Start
-#         #   uses: rishabhgupta/split-by@v1
-#         #   id: splitCommentFront
-#         #   with:
-#         #     string: ${{ steps.getCommentContent.outputs.content }}
-#         #     split-by: "--> "
-
-#         # - name: Remove Prettier Ignore Comment End
-#         #   uses: rishabhgupta/split-by@v1
-#         #   id: splitCommentBack
-#         #   with:
-#         #     string: ${{ steps.splitCommentFront.outputs._1 }}
-#         #     split-by: " <!--"
-
-      - name: Add Comment to PR
+      - name: Add Unreleased Changes to PR
         # In the event of 401 bad credentials, check PAT expiry on bot
         run: |
           git config --local user.email "matthew.magnotta@avb.net"
