--- a/.github/workflows/draft-new-release.yml
+++ b/.github/workflows/draft-new-release.yml
@@ -35,7 +35,7 @@ jobs:
       - name: Commit package.json
         id: make-commit
         run: |
-          git add ./package.json ./URELEASEDCHANGELOG.md
+          git add ./package.json
           git commit --message "Prepare release ${{ github.event.inputs.version }}"
           echo "::set-output name=commit::$(git rev-parse HEAD)"
           
