--- a/.github/workflows/draft-new-release.yml
+++ b/.github/workflows/draft-new-release.yml
@@ -48,7 +48,8 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          head: 'chore: Prerelease - ${{ github.event.inputs.version }}'
+          head: > 
+              chore: Prerelease - ${{ github.event.inputs.version }}
           base: master
           title: Release version ${{ github.event.inputs.version }}
           reviewers: ${{ github.actor }}
