--- a/.github/workflows/draft-new-release.yml
+++ b/.github/workflows/draft-new-release.yml
@@ -48,9 +48,10 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          head: chore Prerelease/${{ github.event.inputs.version }}
+          head: release/${{ github.event.inputs.version }}
           base: master
-          title: Release version ${{ github.event.inputs.version }}
+          title: > 
+                chore: Prerelease - ${{ github.event.inputs.version }}
           reviewers: ${{ github.actor }}
           body: |
             Hi @${{ github.actor }}!
