--- a/.github/workflows/draft-new-release.yml
+++ b/.github/workflows/draft-new-release.yml
@@ -59,6 +59,6 @@ jobs:
           title: > 
                 chore: Prerelease - ${{ github.event.inputs.version }}
           reviewers: ${{ github.actor }}
-          body: ${{ steps.getCommentContent.outputs.content }
+          body: ${{ steps.getCommentContent.outputs.content }}
                   
 
