--- a/.github/workflows/draft-new-release.yml
+++ b/.github/workflows/draft-new-release.yml
@@ -36,7 +36,7 @@ jobs:
         id: make-commit
         run: |
           git add ./package.json
-          git commit --message "Prepare release ${{ github.event.inputs.version }}"
+          git commit --message "chore: Prerealease - ${{ github.event.inputs.version }}"
           echo "::set-output name=commit::$(git rev-parse HEAD)"
           
       - name: Push new branch
