--- a/.github/workflows/update-changelog.yml
+++ b/.github/workflows/update-changelog.yml
@@ -23,7 +23,7 @@ jobs:
         uses: stefanzweifel/git-auto-commit-action@v4
         with:
           branch: master
-          commit_message: Update CHANGELOG
+          commit_message: Update CHANGELOG ${{  github.ref_name }}
           file_pattern: CHANGELOG.md
 
       - name: Set Git config
