--- a/.github/workflows/publish-new-release.yml
+++ b/.github/workflows/publish-new-release.yml
@@ -26,6 +26,11 @@ jobs:
 
           echo "RELEASE_VERSION=$VERSION" >> $GITHUB_ENV
           
+      - name: Initialize mandatory git config
+        run: |
+          git config user.name "GitHub actions"
+          git config user.email noreply@github.com
+                    
       - name: Bump version in package.json
         run: yarn version --new-version ${{ env.RELEASE_VERSION }} --no-git-tag-version
         
