--- a/.github/workflows/hotfix-release.yml
+++ b/.github/workflows/hotfix-release.yml
@@ -12,9 +12,10 @@ on:
         required: true
 
 jobs:
-  draft-new-release:
+  hotfix-new-release:
     name: "Draft a new release"
     runs-on: ubuntu-latest
+    if: ${{ github.event.inputs.verify-branch !== 'true' }}
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
