--- a/.github/workflows/publish-new-release.yml
+++ b/.github/workflows/publish-new-release.yml
@@ -51,9 +51,9 @@ jobs:
           curl \
           -X POST \
           -H "Accept: application/vnd.github+json" \ 
-          -H "Authorization: Bearer ${{ secrets.GITHUB_TOKEN }} \
+          -H "Authorization: Bearer ${{ secrets.GITHUB_TOKEN }}" \
           https://api.github.com/repos/MattyMags/draft-release/releases \
-          -d '{"tag_name": "${{ env.RELEASE_VERSION }}","target_commitish":"master","name":"v1.0.0","body":"Description of the release","draft":false,"prerelease":false,"generate_release_notes":false}'
+          -d "{"tag_name": "${{ env.RELEASE_VERSION }}","target_commitish":"master","name":"v1.0.0","body":"Description of the release","draft":false,"prerelease":false,"generate_release_notes":false}"
 
 
           
