--- a/.github/workflows/publish-new-release.yml
+++ b/.github/workflows/publish-new-release.yml
@@ -52,9 +52,9 @@ jobs:
             --method POST \
             -H "Accept: application/vnd.github+json" \
             /repos/mattymags/draft-release/releases \
-            -f tag_name='${{ env.RELEASE_VERSION }}' \
+            -f tag_name=${{ env.RELEASE_VERSION }}  \
            -f target_commitish='master' \
-           -f name='$ {{ env.RELEASE_VERSION }}' \
+           -f name=${{ env.RELEASE_VERSION }} \
            -f body='Description of the release' \
            -F draft=false \
            -F prerelease=false \
