--- a/.github/workflows/publish-new-release.yml
+++ b/.github/workflows/publish-new-release.yml
@@ -53,10 +53,10 @@ jobs:
            -F prerelease=false \
            -F generate_release_notes=true 
 
-      - name: Set Git config
-        run: |
-          git config --local user.email "actions@github.com"
-          git config --local user.name "Github Actions"
+#       - name: Set Git config
+#         run: |
+#           git config --local user.email "actions@github.com"
+#           git config --local user.name "Github Actions"
 
       - name: Merge master back to dev
         run: |
