--- a/.github/workflows/hotfix-release.yml
+++ b/.github/workflows/hotfix-release.yml
@@ -23,11 +23,12 @@ jobs:
           ref: master
           fetch-depth: 0
       
-      - name: Set Git config
-        run: |
-          git config --local user.email "actions@github.com"
-          git config --local user.name "Github Actions"
 
+      - name: Initialize mandatory git config
+        run: |
+          git config user.name "GitHub actions"
+          git config user.email noreply@github.com
+          
       - name: Bump version in package.json
         run: yarn version --new-version ${{ github.event.inputs.version }} 
           
