--- a/.github/workflows/update-changelog.yml
+++ b/.github/workflows/update-changelog.yml
@@ -31,7 +31,7 @@ jobs:
       - name: Commit updated CHANGELOG
         run: | 
             git add CHANGELOG.md
-            git commit -m 'chore: update - ${{ env.CURRENT_VERSION }}
+            git commit -m 'chore: update - ${{ env.CURRENT_VERSION }}'
             git push        
 
       - name: Merge master back to dev
