fix: add avb-dev-services bot to commiter

--- a/.github/workflows/publish-new-release.yml
+++ b/.github/workflows/publish-new-release.yml
@@ -27,8 +27,8 @@ jobs:
 
       - name: Initialize mandatory git config
         run: |
-          git config user.name "GitHub actions"
-          git config user.email noreply@github.com
+          git config --local user.email "avb-dev-services@avb.net"
+          git config --local user.name "AVB Dev Bot"
 
       - name: Bump version in package.json
         run: yarn version --new-version ${{ env.RELEASE_VERSION }}
