--- a/.github/workflows/update-changelog.yml
+++ b/.github/workflows/update-changelog.yml
@@ -26,8 +26,8 @@ jobs:
         
       - name: Set Git config
         run: |
-          git config --local user.email "actions@github.com"
-          git config --local user.name "Github Actions"
+          git config --local user.email "avb-dev-services@avb.net"
+          git config --local user.name "AVB Dev Bot"
 
       - name: Commit updated CHANGELOG
         run: | 
