--- a/.github/workflows/hotfix-release.yml
+++ b/.github/workflows/hotfix-release.yml
@@ -22,21 +22,17 @@ jobs:
         with:
           ref: master
           fetch-depth: 0
-      
 
       - name: Initialize mandatory git config
         run: |
-          git config user.name "GitHub actions"
-          git config user.email noreply@github.com
+          git config --local user.email "avb-dev-services@avb.net"
+          git config --local user.name "AVB Dev Bot"
           
-      - name: Bump version in package.json
+      - name: Bump Version
         run: yarn version --new-version ${{ github.event.inputs.version }} 
           
       - name: Push Tags
         run: git push --follow-tags
-
-#       - name: Push to master
-#         run: git push origin master
 
       - name: Create Release
         env:
